# MumbelingMages

./: .gitignore  CMakeLists.txt  README.md  a.c
docs/: Roadmap
includes/: IO_handler.h  animation_handler.h  bullet.h  camera.h  enemy.h  enemy_properties.h  game.h  mage_properties.h  map.h  orb.h  player.h  powerup.h  resource_tracker.h  sprite.h  std_includes.h
includes/core/: IO_handler.h  animation_handler.h  bullet.h  camera.h  game.h  orb.h  player.h  powerup.h  resource_tracker.h  window.h
includes/enemy/: enemy.h  enemy_properties.h  enemy_sprite.h  enemy_texture.h
includes/mage/: enemy_sprite.h  mage_properties.h  mage_sprite.h  mage_texture.h
includes/mumble/: mumble.h  mumble_properties.h  mumble_sprite.h  mumble_texture.h
includes/player/: player.h  player_properties.h  player_sprite.h  player_texture.h
src/: IO_handler.c  animation_handler.c  bullet.c  camera.c  enemy.c  enemy_properties.c  game.c  mage_properties.c  main.c  map.c  orb.c  player.c  powerup.c  resource_tracker.c  window.c
src/core/: IO_handler.c  animation_handler.c  bullet.c  camera.c  game.c  map.c  orb.c  player.c  powerup.c  resource_tracker.c  window.c
src/enemy/: enemy.c  enemy_properties.c  enemy_texture.c
src/mage/: mage_properties.c  mage_texture.c
src/mumble/: mumble.c  mumble_properties.c  mumble_texture.c
src/mumbles/: mumble.c
src/player/: player.c  player_properties.c  player_texture.c
